--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
 
 
   <main class="contenedor">
-    <div class="card"><img src="img/1.jpg" alt=""></div>
-    <div class="card"><img src="img/2.jpg" alt=""></div>
-    <div class="card"><img src="img/3.jpg" alt=""></div>
-    <div class="card"><img src="img/4.jpg" alt=""></div>
-    <div class="card"><img src="img/5.jpg" alt=""></div>
-    <div class="card"><img src="img/6.jpg" alt=""></div>
-    <div class="card"><img src="img/7.jpg" alt=""></div>
-    <div class="card"><img src="img/8.jpg" alt=""></div>
-    <div class="card"><img src="img/9.jpg" alt=""></div>
-    <div class="card"><img src="img/10.jpg" alt=""></div>
-    <div class="card"><img src="img/11.jpg" alt=""></div>
-    <div class="card"><img src="img/12.jpg" alt=""></div>
-    <div class="card"><img src="img/13.jpg" alt=""></div>
-    <div class="card"><img src="img/14.jpg" alt=""></div>
-    <div class="card"><img src="img/15.jpg" alt=""></div>
-    <div class="card"><img src="img/16.jpg" alt=""></div>
-    <div class="card"><img src="img/17.jpg" alt=""></div>
-    <div class="card"><img src="img/18.jpg" alt=""></div>
-    <div class="card"><img src="img/19.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/1.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/2.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/3.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/4.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/5.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/6.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/7.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/8.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/9.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/10.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/11.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/12.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/13.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/14.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/15.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/16.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/17.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/18.jpg" alt=""></div>
+    <div class="card"><img loading="lazy" src="img/19.jpg" alt=""></div>
   </main>
 
 
